--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,14 @@
     "python.analysis.extraPaths": [
         "/home/learnroboticswros/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
+    }
 }
